--- a/public/style.css
+++ b/public/style.css
@@ -7,7 +7,6 @@
 *{
     scroll-behavior: smooth;
     
-    color:red;
 }
 html,body {
     width:100vw;
@@ -47,6 +46,7 @@ body{
     background: -webkit-linear-gradient(25deg, rgba(51,51,180,1) 16%, rgba(0,212,255,1) 100%);
     background: linear-gradient(25deg, rgba(51,51,180,1) 16%, rgba(0,212,255,1) 100%);
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#3333b4",endColorstr="#00d4ff",GradientType=1);
+    -webkit-filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#3333b4",endColorstr="#00d4ff",GradientType=1);
     color: #fff;
     position: absolute;
     z-index: 10;
@@ -75,7 +75,7 @@ body{
     background: -webkit-linear-gradient(25deg, rgba(51,51,180,1) 16%, rgba(0,212,255,1) 100%);
     background: linear-gradient(25deg, rgba(51,51,180,1) 16%, rgba(0,212,255,1) 100%);
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#3333b4",endColorstr="#00d4ff",GradientType=1);
-
+    -webkit-filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#3333b4",endColorstr="#00d4ff",GradientType=1);
 }
 #weather{
     position: relative;
@@ -192,6 +192,7 @@ body{
     background: -webkit-linear-gradient(25deg, rgba(51,51,180,1) 16%, rgba(0,212,255,1) 100%);
     background: linear-gradient(25deg, rgba(51,51,180,1) 16%, rgba(0,212,255,1) 100%);
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#3333b4",endColorstr="#00d4ff",GradientType=1);
+    -webkit-filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#3333b4",endColorstr="#00d4ff",GradientType=1);
     transition: .5s clip-path ease-in-out;
     z-index: -2;
     border-radius: 5px;
