--- a/public/style.css
+++ b/public/style.css
@@ -1,8 +1,5 @@
 /*font-family: 'Rubik', sans-serif;*/
-/* @font-face {
-    font-family: 'Rubik'; 
-    src: url(fonts/pompadur.ttf); /* Путь к файлу со шрифтом */
-   /*test*/
+
 
 *{
     scroll-behavior: smooth;
@@ -198,11 +195,57 @@ body{
     border-radius: 5px;
 
 }
- .settings_block{
+.settings_block{
     display: flex;
     flex-direction: column;
+    justify-content: center;
     margin: 5% auto;
     position: relative;
+}
+.settings_block > div{
+    background-color: rgba(255, 255, 255, 0.3);
+    width: 75%;
+    margin: 0 auto 15px auto;
+}
+.settings-subitem{
+    visibility: hidden;
+    max-height: 0;
+    position: relative;
+    background-color: rgba(255, 255, 255, 0.2);
+    transform: translateY(-20%); 
+     opacity: 0; 
+     padding-bottom:0; 
+     transition: .4s transform,visibility,height,opacity ease-in-out;
+}
+.settings_block > div{
+    transition: .35s box-shadow ease-in-out;
+}
+ .settings_block > div:hover{
+
+    background-color: rgba(255, 255, 255, 0.3);
+    -webkit-box-shadow: 3px 3px 5px 0px rgba(0,0,0,0.3);
+    -moz-box-shadow: 3px 3px 5px 0px rgba(0,0,0,0.3);
+    box-shadow: 3px 3px 5px 0px rgba(0,0,0,0.3);
+}
+.wind-subitem_label > h3{
+    margin: 0;
+    padding: 18px 0;
+}
+.wind-subitem_label > h3:hover{
+    cursor: pointer;
+}
+.settings_block .settings-subitems-input:checked ~ .settings-subitem{
+    max-height: 100%;
+    height: 100%;
+    transform: translateY(0);
+    visibility: visible;
+    opacity: 1;
+    padding: 25px;
+}
+.settings_block .settings-subitems-input:checked ~ .settings_block > div{
+    -webkit-box-shadow: 3px 3px 5px 0px rgba(0,0,0,0.3);
+    -moz-box-shadow: 3px 3px 5px 0px rgba(0,0,0,0.3);
+    box-shadow: 3px 3px 5px 0px rgba(0,0,0,0.3);
 }
 
 .close_settings{
@@ -215,11 +258,11 @@ body{
 .close_settings:hover{
     cursor: pointer;
 }
-.settings_item, .sources{
+.settings_item, .sources, .wind-settings{
     margin-bottom: 15px;
 }
 .sources_block{
-    width: 65%;
+    width: 80%;
     margin: 0 auto;
     display: flex;
     justify-content: space-evenly;
@@ -253,7 +296,7 @@ body{
     transition: .3s all ease;
     border-radius: 10px;
 }
-.units_labels > span{
+.units_labels > span, .turn_wind{
     text-decoration: underline;
     padding: 10px;
     cursor: pointer;
@@ -279,13 +322,23 @@ body{
 .settings_item #units-4:checked + .units_labels span{ border: 1px solid #fff;}
 .settings_item #units-5:checked + .units_labels span{ border: 1px solid #fff;}
 
-.settings_block > span{
-    margin: 40px 10px 0;
+.wind-settings #wind-1 + .wind_labels .turn_wind{ border: 1px solid rgba(0, 0, 0, 0);}
+.wind-settings  #wind-2 + .wind_labels .turn_wind{ border: 1px solid rgba(0, 0, 0, 0);}
+.wind-settings   #wind-1:checked + .wind_labels .turn_wind{ border: 1px solid #fff;}
+.wind-settings  #wind-2:checked + .wind_labels .turn_wind{ border: 1px solid #fff;}
+
+.to_change{
+    margin: 0 auto 10px;
+    width: 75%;
 }
-.units, .lang{
+.settings_block input{
     display: none;
 }
-
+.wind_settings > p{
+    font-size: 14px;
+    margin: 0 auto;
+    width: 95%;
+}
 
 
 .condition{
