--- a/public/style.css
+++ b/public/style.css
@@ -240,7 +240,7 @@ body{
     transform: translateY(0);
     visibility: visible;
     opacity: 1;
-    padding: 25px;
+    padding: 20px;
 }
 .settings_block .settings-subitems-input:checked ~ .settings_block > div{
     -webkit-box-shadow: 3px 3px 5px 0px rgba(0,0,0,0.3);
@@ -286,7 +286,11 @@ body{
     height:30px;
     width: initial;
 }
-
+.settings_item:nth-of-type(2) >.settings-subitem {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+}
 #russian, #english{
     height: 30px;
     width: initial;
@@ -296,7 +300,7 @@ body{
     transition: .3s all ease;
     border-radius: 10px;
 }
-.units_labels > span, .turn_wind{
+.units_labels, .turn_wind{
     text-decoration: underline;
     padding: 10px;
     cursor: pointer;
@@ -310,34 +314,35 @@ body{
 .settings_item #lang-1:checked + .lang-label #russian{ border: 1px solid #fff;}
 .settings_item #lang-2:checked + .lang-label #english{ border: 1px solid #fff;}
 
-.settings_item #units-1 + .units_labels span{ border: 1px solid rgba(0, 0, 0, 0);}
-.settings_item #units-2 + .units_labels span{ border: 1px solid rgba(0, 0, 0, 0);}
-.settings_item #units-3 + .units_labels span{ border: 1px solid rgba(0, 0, 0, 0);}
-.settings_item #units-4 + .units_labels span{ border: 1px solid rgba(0, 0, 0, 0);}
-.settings_item #units-5 + .units_labels span{ border: 1px solid rgba(0, 0, 0, 0);}
+.settings_item #units-1 + .units_labels{ border: 1px solid rgba(0, 0, 0, 0);}
+.settings_item #units-2 + .units_labels{ border: 1px solid rgba(0, 0, 0, 0);}
+.settings_item #units-3 + .units_labels{ border: 1px solid rgba(0, 0, 0, 0);}
+.settings_item #units-4 + .units_labels{ border: 1px solid rgba(0, 0, 0, 0);}
+.settings_item #units-5 + .units_labels{ border: 1px solid rgba(0, 0, 0, 0);}
 
-.settings_item #units-1:checked + .units_labels span{ border: 1px solid #fff;}
-.settings_item #units-2:checked + .units_labels span{ border: 1px solid #fff;}
-.settings_item #units-3:checked + .units_labels span{ border: 1px solid #fff;}
-.settings_item #units-4:checked + .units_labels span{ border: 1px solid #fff;}
-.settings_item #units-5:checked + .units_labels span{ border: 1px solid #fff;}
+.settings_item #units-1:checked + .units_labels{ border: 1px solid #fff;}
+.settings_item #units-2:checked + .units_labels{ border: 1px solid #fff;}
+.settings_item #units-3:checked + .units_labels { border: 1px solid #fff;}
+.settings_item #units-4:checked + .units_labels{ border: 1px solid #fff;}
+.settings_item #units-5:checked + .units_labels { border: 1px solid #fff;}
 
 .wind-settings #wind-1 + .wind_labels .turn_wind{ border: 1px solid rgba(0, 0, 0, 0);}
 .wind-settings  #wind-2 + .wind_labels .turn_wind{ border: 1px solid rgba(0, 0, 0, 0);}
 .wind-settings   #wind-1:checked + .wind_labels .turn_wind{ border: 1px solid #fff;}
 .wind-settings  #wind-2:checked + .wind_labels .turn_wind{ border: 1px solid #fff;}
 
+
 .to_change{
     margin: 0 auto 10px;
-    width: 75%;
+    width: 63%;
 }
 .settings_block input{
     display: none;
 }
-.wind_settings > p{
+.wind-settings > .settings-subitem > p{
     font-size: 14px;
-    margin: 0 auto;
     width: 95%;
+    margin: 0 auto 25px;
 }
 
 
@@ -992,7 +997,9 @@ label.day:hover{
     .propability{
         margin-top: 6vw;
     }
-
+    .settings_window{
+        clip-path: circle(0.1% at 56.4% 2%);
+    }
     .wind_text{
         margin-right: 15px;
     }
