--- a/public/style.css
+++ b/public/style.css
@@ -30,7 +30,7 @@ body{
     position: relative;
     height: 100vh;
     margin: 0;
-    /* overflow-x: hidden; */
+     overflow-x: hidden; 
 }
 #container{
     width: 100%;
@@ -179,7 +179,7 @@ body{
 .settings_window{
     clip-path: circle(0.1% at 53.6% 2.2%);
     width: 100%;
-    height: 100%;
+    height: fit-content;
     left: 0;
     top: 0;
     position: absolute;
@@ -192,7 +192,10 @@ body{
     -webkit-filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#3333b4",endColorstr="#00d4ff",GradientType=1);
     transition: .5s clip-path ease-in-out;
     z-index: -2;
-    border-radius: 5px;
+    border-radius: 10px;
+    -webkit-box-shadow: 3px 3px 7px 0px rgba(0,0,0,0.51);
+-moz-box-shadow: 3px 3px 7px 0px rgba(0,0,0,0.51);
+box-shadow: 3px 3px 7px 0px rgba(0,0,0,0.51);
 
 }
 .settings_block{
@@ -201,6 +204,7 @@ body{
     justify-content: center;
     margin: 5% auto;
     position: relative;
+    
 }
 .settings_block > div{
     background-color: rgba(255, 255, 255, 0.3);
@@ -212,21 +216,26 @@ body{
     max-height: 0;
     position: relative;
     background-color: rgba(255, 255, 255, 0.2);
-    transform: translateY(-20%); 
+
      opacity: 0; 
      padding-bottom:0; 
-     transition: .4s transform,visibility,height,opacity ease-in-out;
+     transition: .4s visibility,height,opacity, background-color ease-in-out;
 }
 .settings_block > div{
-    transition: .35s box-shadow ease-in-out;
+    transition: .25s box-shadow, background-color ease-in-out;
+    background: rgb(51,51,180);
+    background: -moz-linear-gradient(205deg, rgba(51,51,180,0.35) 5%, rgba(0,212,255,0.35) 85%);
+    background: -webkit-linear-gradient(205deg, rgba(51,51,180,0.35) 5%, rgba(0,212,255,0.35) 85%);
+    background: linear-gradient(205deg, rgba(51,51,180,0.35) 5%, rgba(0,212,255,0.35) 85%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#3333b4",endColorstr="#00d4ff",GradientType=1);
 }
- .settings_block > div:hover{
+  .settings_block > div:hover{
 
     background-color: rgba(255, 255, 255, 0.3);
-    -webkit-box-shadow: 3px 3px 5px 0px rgba(0,0,0,0.3);
+    -webkit-box-shadow: 3px 3px 5px 0px rgba(0, 0, 0, 0.3);
     -moz-box-shadow: 3px 3px 5px 0px rgba(0,0,0,0.3);
     box-shadow: 3px 3px 5px 0px rgba(0,0,0,0.3);
-}
+} 
 .wind-subitem_label > h3{
     margin: 0;
     padding: 18px 0;
@@ -234,18 +243,22 @@ body{
 .wind-subitem_label > h3:hover{
     cursor: pointer;
 }
-.settings_block .settings-subitems-input:checked ~ .settings-subitem{
+.wind_labels{
+    width: fit-content;
+    margin: 0 auto;
+}
+.settings_block .settings-subitems-input:checked + div .settings-subitem{
     max-height: 100%;
     height: 100%;
-    transform: translateY(0);
     visibility: visible;
     opacity: 1;
     padding: 20px;
 }
-.settings_block .settings-subitems-input:checked ~ .settings_block > div{
+.settings_block .settings-subitems-input:checked + div{
     -webkit-box-shadow: 3px 3px 5px 0px rgba(0,0,0,0.3);
     -moz-box-shadow: 3px 3px 5px 0px rgba(0,0,0,0.3);
     box-shadow: 3px 3px 5px 0px rgba(0,0,0,0.3);
+    background-color: rgba(255, 255, 255, 0.3);
 }
 
 .close_settings{
@@ -289,7 +302,8 @@ body{
 .settings_item:nth-of-type(2) >.settings-subitem {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-evenly;
+    justify-content: space-between;
+
 }
 #russian, #english{
     height: 30px;
@@ -300,7 +314,8 @@ body{
     transition: .3s all ease;
     border-radius: 10px;
 }
-.units_labels, .turn_wind{
+.units_labels, .wind_labels{
+    display:block;
     text-decoration: underline;
     padding: 10px;
     cursor: pointer;
@@ -326,10 +341,10 @@ body{
 .settings_item #units-4:checked + .units_labels{ border: 1px solid #fff;}
 .settings_item #units-5:checked + .units_labels { border: 1px solid #fff;}
 
-.wind-settings #wind-1 + .wind_labels .turn_wind{ border: 1px solid rgba(0, 0, 0, 0);}
-.wind-settings  #wind-2 + .wind_labels .turn_wind{ border: 1px solid rgba(0, 0, 0, 0);}
-.wind-settings   #wind-1:checked + .wind_labels .turn_wind{ border: 1px solid #fff;}
-.wind-settings  #wind-2:checked + .wind_labels .turn_wind{ border: 1px solid #fff;}
+.wind-settings #wind-1 + .wind_labels { border: 1px solid rgba(0, 0, 0, 0);}
+.wind-settings  #wind-2 + .wind_labels{ border: 1px solid rgba(0, 0, 0, 0);}
+.wind-settings   #wind-1:checked + .wind_labels{ border: 1px solid #fff;}
+.wind-settings  #wind-2:checked + .wind_labels{ border: 1px solid #fff;}
 
 
 .to_change{
@@ -342,7 +357,7 @@ body{
 .wind-settings > .settings-subitem > p{
     font-size: 14px;
     width: 95%;
-    margin: 0 auto 25px;
+    margin: 0 auto 10px;
 }
 
 
@@ -999,6 +1014,10 @@ label.day:hover{
     }
     .settings_window{
         clip-path: circle(0.1% at 56.4% 2%);
+    }
+    .settings_item:nth-of-type(2) >.settings-subitem {
+
+        justify-content: space-evenly;
     }
     .wind_text{
         margin-right: 15px;
