--- a/public/style.css
+++ b/public/style.css
@@ -359,7 +359,9 @@ box-shadow: 3px 3px 7px 0px rgba(0,0,0,0.51);
     width: 95%;
     margin: 0 auto 10px;
 }
-
+.wind-subitem_label >h3 > span{
+    font-size: 14px;
+}
 
 .condition{
     width: 90%;
