--- a/public/style.css
+++ b/public/style.css
@@ -236,8 +236,12 @@ box-shadow: 3px 3px 7px 0px rgba(0,0,0,0.51);
     box-shadow: 3px 3px 5px 0px rgba(0,0,0,0.3);
 } 
 .wind-subitem_label > h3{
-    margin: 0;
+    margin: 0 auto;
+    width: 95%;
     padding: 18px 0;
+}
+.wind-subitem_label > h3 > span{
+    font-size: 15px;
 }
 .wind-subitem_label > h3:hover{
     cursor: pointer;
@@ -301,7 +305,7 @@ box-shadow: 3px 3px 7px 0px rgba(0,0,0,0.51);
 .settings_item:nth-of-type(2) >.settings-subitem {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: center;
 
 }
 #russian, #english{
