--- a/public/style.css
+++ b/public/style.css
@@ -45,6 +45,7 @@ body{
     -webkit-filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#3333b4",endColorstr="#00d4ff",GradientType=1);
     color: #fff;
     position: absolute;
+    left: 0;
     z-index: 10;
     height: 100%;
     width: 100%;
@@ -799,6 +800,7 @@ label.day:hover{
         width:100%;
         top: -7px;
         height: auto;
+        left: -33.33%;
     }
 }
 @media (max-aspect-ratio: 16/9) {
@@ -806,7 +808,7 @@ label.day:hover{
         width:auto;
         height: 101vh;
         top: -7px;
-        left: -33.33%;
+
     }
 }
 
@@ -984,28 +986,25 @@ label.day:hover{
  @media screen and (max-width:500px){
      /*Weather*/
     #weather{
-        grid-template-rows: 8fr 1fr 1fr;
-        grid-template-columns: 1fr 1fr 1fr;
-
+        display: block;
         height: auto;
         text-align: center;
         width: auto;
     }
-    #weather > div{
-        grid-column: 1/4;
-    } 
+
     #display{
-        grid-row:1/2;
+        margin-bottom: 60px;
         grid-template-columns: 1fr;
         grid-template-rows: minmax(250px, 350px) repeat(2, minmax(250px, 350px)) 250px 300px;
     }
     .slider_wrap{
-        grid-row: 2/3;
-
+        margin-bottom: 40px;
     }
-    .days_wrap{
-        grid-row: 3/4;
-    } 
+
+    .loading{
+        width: 87%;
+        left: unset;
+    }
     /*display*/
 
     #display > div{
@@ -1040,7 +1039,6 @@ label.day:hover{
         grid-row: 1/2;
         margin-bottom: 28px;
     }
-    
     #other{
         grid-row: 2/3;
         border-left: none;
@@ -1066,5 +1064,6 @@ label.day:hover{
     }
     .chart_area{
         grid-row: 5/6;
+        margin-top: -35px;
     }
 } 
