--- a/public/style.css
+++ b/public/style.css
@@ -50,7 +50,7 @@ body{
     position: absolute;
     left: 0;
     z-index: 10;
-    height: 100%;
+    height: 97%;
     width: 100%;
     border-radius: 5px;
 }
@@ -401,7 +401,10 @@ box-shadow: 3px 3px 7px 0px rgba(0,0,0,0.51);
     margin: 15px auto 10px auto;
 
 }
-
+.curr_icon{
+    height: 1.7rem;
+    margin: 0 7px -7px 0;
+}
 
 /*-----------------------DETAILS-----------------------*/
 #details{
@@ -432,7 +435,7 @@ box-shadow: 3px 3px 7px 0px rgba(0,0,0,0.51);
     font-weight: 400;
 }
 .wind_speed{
-    margin: 10px 0 15px 0;
+    margin-bottom: 25px;
 }
 .wind_dir{
     height: 40px;
