--- a/public/style.css
+++ b/public/style.css
@@ -1,8 +1,4 @@
 /*font-family: 'Rubik', sans-serif;*/
-*{
-    scroll-behavior: smooth;
-    
-}
 video {
     pointer-events: none;
   }
@@ -21,11 +17,33 @@ html,body {
 .no_opacity{
     opacity: 0;
 }
+#hours, #days, html{
+    scroll-behavior: smooth;
+}
 html{
     /* height: 100vh; */
     margin: 0;
 }
-
+.anchor{
+    width: 25px;
+    height: 25px;
+    fill: #000;
+}
+.hide_anchor{
+    opacity: 0;
+    display: none;
+}
+.anchor_wrapper{
+    background-color: rgba(255,255,255,0.9);
+    padding: 5px;
+    display: block;
+    position: fixed;
+    right: 15px;
+    bottom: 15px;
+    box-shadow: 4px 4px 7px 1px rgba(0, 0, 0, 0.50);
+    border-radius:20px;
+    transition: .25s all ease;
+}
 body{
     position: relative;
     height: 100vh;
@@ -110,7 +128,7 @@ body{
     position: relative;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(2, 1fr) 2fr;
-
+    opacity: 0;
 }
 
 
@@ -147,6 +165,22 @@ body{
     height: 15px;
     fill: white;
 }
+.loader {
+    position: relative;
+    top: 60px;
+    margin: 0 auto;
+    border: 3px solid rgba(243, 243, 243, 0.75);
+    border-top: 3px solid rgb(28, 161, 250);
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+    animation: spin 1s linear infinite;
+  }
+  
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
 /*settings*/
 #settings, #search{
     height: fit-content;
@@ -492,6 +526,7 @@ input[type='radio']{
     grid-row: 1/2;
     border-right: 1px solid rgba(255, 255, 255, 0.3);
     text-align: center;
+    
 }
 
 /*wind*/
@@ -716,12 +751,13 @@ input[type='radio']{
     overflow: hidden;
 }
 
-.days_wrap{
+#days_wrap{
     grid-area: days;
     height: inherit;/*?*/
     position: relative;
     padding-left: 20px;
     margin-left: 20px;
+    opacity: 0;
 }
 
 .day{
@@ -733,9 +769,9 @@ input[type='radio']{
    border-radius: 5px;
 }
 label.day{
-    -webkit-box-shadow: 2px 3px 7px 0px  rgba(0,0,0,0.75);
-    -moz-box-shadow: 2px 3px 7px 0px  rgba(0,0,0,0.75);
-    box-shadow: 2px 3px 7px 0px rgba(0,0, 0, 0.75);
+    -webkit-box-shadow: 2px 3px 7px 0px  rgba(0,0,0,0.9);
+    -moz-box-shadow: 2px 3px 7px 0px  rgba(0,0,0,0.9);
+    box-shadow: 2px 3px 7px 0px rgba(0,0, 0, 0.9);
  
 }
 .day:hover{
@@ -746,11 +782,16 @@ label.day{
 label.day:hover{
     cursor: pointer;
     border: 1px solid rgba(255, 255, 255, 0.2);
-    -webkit-box-shadow: 2px 3px 7px 0px  rgba(0,0,0,0.85);
-    -moz-box-shadow: 2px 3px 7px 0px  rgba(0,0,0,0.85);
-    box-shadow: 2px 3px 7px 0px rgba(0,0, 0, 0.85);
+    -webkit-box-shadow: 2px 3px 7px 0px  rgba(0,0,0,0.95);
+    -moz-box-shadow: 2px 3px 7px 0px  rgba(0,0,0,0.95);
+    box-shadow: 2px 3px 7px 0px rgba(0,0, 0, 0.95);
 }
-
+.scrollArrow{
+    background-color: #fff;
+    position: absolute;
+    top: 50%;
+    z-index: 1000;
+}
 .days_radio{
     display: none;
 }
@@ -807,6 +848,7 @@ label.day:hover{
     grid-area: slider_wrap;
     position: relative;
     width: -moz-available;
+    opacity: 0;
 }
 
 #hours{
@@ -864,7 +906,7 @@ label.day:hover{
     color: rgba(255,255,255,0.5);
     padding: 10px;
     border-radius: 5px;
-    
+    opacity: 0;
     margin-top: 15px;
 
     display: flex;
@@ -908,7 +950,6 @@ label.day:hover{
         'display display display display display display'
         'display display display display display display'
         'display display display display display display'
-
         'slider_wrap slider_wrap slider_wrap slider_wrap slider_wrap slider_wrap'
         'days days days days days days'
         'legal legal legal legal legal legal';
@@ -927,7 +968,7 @@ label.day:hover{
     }
 
     .loading{
-        height: 100%;
+        height: 97%;
     }
     .details{
         justify-content: center;
@@ -944,7 +985,7 @@ label.day:hover{
         margin: auto;
         height: 80%;
     }
-    .days_wrap{
+    #days_wrap{
         width: 100%;
     }
     #slidemenu{
@@ -964,7 +1005,7 @@ label.day:hover{
         justify-content: center;
     }
 
-    .days_wrap{
+    #days_wrap{
         margin-left: 0;
         padding-left: 0;
     }
@@ -1054,7 +1095,7 @@ label.day:hover{
         margin-bottom: 10px;
     }
 }
- @media screen and (max-width:500px){
+ @media screen and (max-width:550px){
      /*Weather*/
     #weather{
         display: block;
