v 4.3.2 - Some minor stuff

--- a/public/style.css
+++ b/public/style.css
@@ -11,6 +11,11 @@ html,body {
     transition: .4s all ease-out;
 
 }
+.refresh_icon{
+    fill: #fff;
+    display: inline-block;
+    width: 14px;
+}
 .full_opacity{
     opacity: 1;
 }
@@ -107,7 +112,7 @@ body{
     'display display display display display display days'
     'slider_wrap slider_wrap slider_wrap slider_wrap slider_wrap slider_wrap days'
     'legal legal legal legal legal legal days';
-    padding: 0 25px 25px 25px;
+    padding: 25px;
     width: 900px;
     height: 1080px;
     border-radius: 5px;
@@ -634,7 +639,19 @@ input[type='radio']{
     grid-row: 1/2;
     border-right: 1px solid rgba(255, 255, 255, 0.3);
     text-align: center;
-    
+    transition: .5s all ease-in-out;
+    position: relative;
+}
+
+.details_wrap{
+    display:flex;
+    flex-direction: column;
+    text-align: center;
+    transition: .25s all ease-out;
+
+}
+#show_details{
+    display: none;
 }
 
 /*wind*/
@@ -648,7 +665,7 @@ input[type='radio']{
     display: flex;
     flex-direction: column;
 }
-.wind_headline, #details > span{
+.wind_headline, .details_wrap > span{
     display: inline-block;
     margin: 40px 10px 0;
 
@@ -913,6 +930,11 @@ label.day:hover{
     z-index: 10;
     color: white;
     transition: .3s all ease;
+    box-shadow: 3px 5px 5px 0px #6b6b6b;
+}
+.updating:hover{
+    cursor:pointer;
+    box-shadow: 3px 5px 5px 0px #4d4d4d;
 }
 .updating> span{
     display: block;
@@ -920,6 +942,14 @@ label.day:hover{
 }
 .updating_footer{
     margin-bottom: 10px;
+    border-radius: 15px;
+    transition: .3s all ease;
+    padding: 15px;
+    background-color: rgba(100, 100, 100, 0.75)
+}
+.updating_footer:hover{
+    cursor: pointer;
+    background-color: rgb(87, 87, 87);
 }
 .updating_footer>span{
     display: block;
@@ -1046,14 +1076,13 @@ label.day:hover{
 
 #legal{
     grid-area:legal;
-    width:calc(100% - 0);
     text-align: left;
     color: rgba(255,255,255,0.5);
     padding: 10px;
     border-radius: 5px;
     opacity: 0;
     margin-top: 15px;
-
+    align-items: baseline;
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
@@ -1067,6 +1096,10 @@ label.day:hover{
 
     margin-right:15px;
 }
+.updating_footer>span>.refresh_icon{
+    fill:rgba(255,255,255,0.5);
+}
+
 /*=================================MEDIA=====================================================*/
 
 @media (min-aspect-ratio: 16/9) {
@@ -1205,7 +1238,9 @@ label.day:hover{
         padding-top: 25px;
         grid-column: 1/2;
         grid-row: 2/3;
+        
     }
+
     #slidemenu{
         grid-column: 1/3;
         grid-row: 3/4;
@@ -1247,6 +1282,7 @@ label.day:hover{
         height: auto;
         text-align: center;
         width: auto;
+        padding: 15px 25px 25px 25px;
     }
 
     #display{
@@ -1284,28 +1320,52 @@ label.day:hover{
         padding: 15px 0;
         width: 95%;
         border-bottom: 1px solid rgba(255, 255, 255, 0.3);
-    }
-    /* #current{
-        grid-row: 1/2;
-    } */
-    #other{
         border-left: none;
+    }
+    #details{
         margin-bottom: 50px;
         padding-bottom: 30px;
+        
     }
-    /* #details{
-        grid-row: 3/4;
-    } */
+    #sunr{
+        margin-top: 20px;
+    }
+    .details_opened{
+        opacity: 1 !important;
+        position: relative !important;
+        transition: .35s all ease-in-out !important;
+    }
+    .details_hide{
+        position: absolute;
+    }
+    #show_details{
+        padding: 15px;
+        background-color: #55c1ff;
+        color: white;
+        font-size: 18px;
+        position: relative;
+        border-radius: 15px;
+        transition: .25s all ease-in;
+        margin-top: 20px;
+        box-shadow: 3px 5px 5px 0px #6b6b6b;
+        display: block;
+    }
+    #dew{
+        margin-bottom: 20px;
+    }
+    #show_details:hover{
+        cursor: pointer;
+        box-shadow: 3px 5px 5px 0px #555555;
+    
+    }
+    .details_wrap{
+        opacity: 0;
+    }
     .backto{
         width: 100px;
         padding-top: 65px;
         margin: 0 30px 15px 0;
     }
-    /* #slidemenu{
-        /* grid-row: 4/5; 
-        height: fit-content;
-        margin: 10% 0;
-    } */
     .chart-container{
         width: 2000px;
     }
