--- a/public/style.css
+++ b/public/style.css
@@ -564,7 +564,8 @@ input[type='radio']{
     margin-bottom: 25px;
 }
 .icon {
-    width: 60px;
+    width: 60px !important;
+    height: 60px !important;
     display: block;
     margin: 15px auto 10px auto;
 }
